Shira/force-app/main/default/objects/Opportunity/fields/Client_s_Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Budget_Range__c</fullName>
    <label>Client&apos;s Budget Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>