Shira/force-app/main/default/objects/Opportunity/fields/Stage_in_the_process__c.field-meta.xml
<CustomField>
    <fullName>Stage_in_the_process__c</fullName>
    <label>Process Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed Successfully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>