Shira/force-app/main/default/objects/Opportunity/fields/Vehicle_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_License_Number__c</fullName>
    <formula>Vehicle__r.License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle License Number</label>
    <type>Text</type>
</CustomField>